# option-pricing-panel

./: .gitignore  Makefile  docker-compose.yml  test_case.md
backend/: .dockerignore  .gitignore  Dockerfile  README.md  openapi.yaml  pyproject.toml
backend/doc/: assignment3.md
backend/src/option_pricing_lab/: __init__.py  app.py  export_openapi.py
backend/src/option_pricing_lab/api/: __init__.py  app.py  errors.py  schemas.py
backend/src/option_pricing_lab/api/routers/: pricing.py  system.py
backend/src/option_pricing_lab/application/: __init__.py  service.py
backend/src/option_pricing_lab/domain/: __init__.py  contracts.py
backend/src/option_pricing_lab/pricing/: __init__.py  american.py  asian.py  basket.py  core.py  european.py  kiko.py
backend/tests/: test_american.py  test_api.py  test_european.py  test_path_dependent.py
frontend/: .dockerignore  .env.production  .env.test  Dockerfile  eslint.config.js  index.html  nginx.conf  openapi.yaml  orval.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: option_price.msw.ts  option_price.ts
frontend/src/api/model/: americanOptionRequest.ts  arithmeticAsianOptionRequest.ts  index.ts  (+16 more)
frontend/src/components/: option-pricing-dashboard.tsx
frontend/src/config/: env.ts
frontend/src/lib/: formatters.ts
frontend/src/mocks/: browser.ts  handlers.ts
scripts/: common.sh  docker-build.sh  docker-down.sh  docker-logs.sh  docker-up.sh  start-backend-local.sh  start-frontend-local.sh  start-local.sh  status-local.sh  stop-local.sh
(+3 files in other folders)
